Added sleep content

--- a/app/GuardianAngel/app/src/main/res/layout/activity_sleep_info.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/activity_sleep_info.xml
@@ -21,10 +21,18 @@
     <!-- Note: A RecyclerView can also be used -->
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="match_parent">
 
-        <!-- Scrollable content -->
+        <TextView
+            android:id="@+id/sleepcon"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="90dp"
+            android:text="@string/sleep_content"
+            android:justificationMode="inter_word"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.core.widget.NestedScrollView>
 
