--- a/app/GuardianAngel/app/src/main/res/layout/fragment_details.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_details.xml
@@ -33,10 +33,6 @@
         android:layout_height="match_parent"
         android:layout_marginTop="70dp">
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent">-->
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="700dp"
@@ -76,7 +72,7 @@
 
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textField1"
+                    android:id="@+id/name"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="90dp"
@@ -96,20 +92,20 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="100dp"
                     android:layout_marginEnd="32dp"
-                    app:layout_constraintEnd_toStartOf="@+id/textField1"
+                    app:layout_constraintEnd_toStartOf="@+id/name"
                     app:layout_constraintTop_toTopOf="@+id/imageView"
                     app:srcCompat="@drawable/baseline_straighten_24" />
 
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textField3"
+                    android:id="@+id/age"
                     android:layout_width="115dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="100dp"
                     android:hint="@string/age"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textField1">
+                    app:layout_constraintTop_toTopOf="@+id/name">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
@@ -119,15 +115,15 @@
 
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textField4"
+                    android:id="@+id/gender"
                     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="115dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="130dp"
                     android:layout_marginTop="100dp"
                     android:hint="@string/gender"
-                    app:layout_constraintStart_toStartOf="@+id/textField3"
-                    app:layout_constraintTop_toTopOf="@+id/textField1">
+                    app:layout_constraintStart_toStartOf="@+id/age"
+                    app:layout_constraintTop_toTopOf="@+id/name">
 
                     <AutoCompleteTextView
                         android:layout_width="match_parent"
@@ -139,14 +135,14 @@
 
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textField8"
+                    android:id="@+id/weight"
                     android:layout_width="115dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="200dp"
                     android:hint="@string/weight"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textField1">
+                    app:layout_constraintTop_toTopOf="@+id/name">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
@@ -155,34 +151,20 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textField9"
+                    android:id="@+id/height"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="130dp"
                     android:layout_marginTop="200dp"
                     android:hint="@string/height"
-                    app:layout_constraintStart_toStartOf="@+id/textField8"
-                    app:layout_constraintTop_toTopOf="@+id/textField1">
+                    app:layout_constraintStart_toStartOf="@+id/weight"
+                    app:layout_constraintTop_toTopOf="@+id/name">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
                 </com.google.android.material.textfield.TextInputLayout>
-
-
-<!--                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
-<!--                    android:id="@+id/next_fab"-->
-<!--                    android:layout_width="200dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_gravity="bottom|end"-->
-
-<!--                    android:layout_marginStart="120dp"-->
-<!--                    android:layout_marginTop="300dp"-->
-<!--                    android:contentDescription="@string/next"-->
-<!--                    android:text="@string/next"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    app:layout_constraintTop_toTopOf="@+id/textField1" />-->
 
                 <TextView
                     android:id="@+id/goal"
@@ -193,7 +175,7 @@
                     android:text="@string/goal"
                     android:textSize="15sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/textField1" />
+                    app:layout_constraintTop_toTopOf="@id/name" />
 
                 <View
                     android:id="@+id/divider1"
@@ -203,7 +185,7 @@
                     android:layout_marginBottom="32dp"
                     android:background="?android:attr/listDivider"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textField1" />
+                    app:layout_constraintTop_toTopOf="@+id/name" />
 
                 <ImageView
                     android:id="@+id/medi"
@@ -223,7 +205,7 @@
                     android:layout_marginTop="350dp"
                     android:hint="@string/step"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textField1">
+                    app:layout_constraintTop_toTopOf="@+id/name">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
@@ -240,7 +222,7 @@
                     android:text="@string/medicaldata"
                     android:textSize="15sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/textField1" />
+                    app:layout_constraintTop_toTopOf="@id/name" />
 
                 <View
                     android:id="@+id/divider2"
@@ -250,7 +232,7 @@
                     android:layout_marginBottom="32dp"
                     android:background="?android:attr/listDivider"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textField1" />
+                    app:layout_constraintTop_toTopOf="@+id/name" />
 
                 <ImageView
                     android:id="@+id/bloodicon"
@@ -258,20 +240,20 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="500dp"
                     android:layout_marginEnd="32dp"
-                    app:layout_constraintEnd_toStartOf="@+id/textField11"
+                    app:layout_constraintEnd_toStartOf="@+id/bloodg"
                     app:layout_constraintTop_toTopOf="@id/imageView"
                     app:srcCompat="@drawable/outline_bloodtype_24" />
 
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textField11"
-                    android:layout_width="115dp"
+                    android:id="@+id/bloodg"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="500dp"
                     android:hint="@string/blood"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textField1">
+                    app:layout_constraintTop_toTopOf="@+id/name">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
@@ -285,19 +267,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="600dp"
                     android:layout_marginEnd="32dp"
-                    app:layout_constraintEnd_toStartOf="@+id/textField11"
+                    app:layout_constraintEnd_toStartOf="@+id/bloodg"
                     app:layout_constraintTop_toTopOf="@id/imageView"
                     app:srcCompat="@drawable/outline_medical_services_24" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textField12"
+                    android:id="@+id/allergy"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="100dp"
                     android:hint="@string/allergy"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textField11">
+                    app:layout_constraintTop_toTopOf="@+id/bloodg">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
@@ -309,14 +291,14 @@
 
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textField13"
+                    android:id="@+id/medc"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="100dp"
                     android:hint="@string/medical"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textField12">
+                    app:layout_constraintTop_toTopOf="@+id/allergy">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
@@ -325,14 +307,14 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textField14"
+                    android:id="@+id/medcs"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="100dp"
                     android:hint="@string/medication"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textField13">
+                    app:layout_constraintTop_toTopOf="@+id/medc">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
@@ -340,7 +322,6 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
-<!--        </LinearLayout>-->
     </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
