--- a/app/GuardianAngel/app/src/main/res/layout/update_layout.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/update_layout.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/customImageView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="500dp"
         android:layout_marginBottom="10dp"
         android:visibility="gone"  >
     </ImageView>
