--- a/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
@@ -36,7 +36,7 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="700dp"
         android:layout_marginTop="100dp">
 
         <LinearLayout
