--- a/app/GuardianAngel/app/src/main/res/layout/sleep_wellness_settings.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/sleep_wellness_settings.xml
@@ -5,14 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sleep_wellness"
-        android:textSize="30sp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="32dp"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            app:menu="@menu/top_app_bar"
+            app:navigationIcon="@drawable/baseline_arrow_back_24"
+            app:title="@string/sleep_wellness" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
 
     <com.google.android.material.materialswitch.MaterialSwitch
         android:id="@+id/toggleSleepWellness"
@@ -28,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
         android:text="@string/select_wakeup_preference_text" />
 
@@ -46,6 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
         android:text="@string/select_approximate_sleep_time_text" />
 
