--- a/app/GuardianAngel/app/src/main/res/layout/update_layout.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/update_layout.xml
@@ -1,18 +1,28 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:layout_height="match_parent">
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            app:menu="@menu/top_app_bar"
+            app:navigationIcon="@drawable/baseline_arrow_back_24" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
         android:id="@+id/customImageView"
-        android:layout_width="fill_parent"
-        android:layout_height="500dp"
-        android:layout_marginBottom="10dp"
-        android:visibility="gone"  >
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="100dp">
     </ImageView>
 
 
@@ -29,9 +39,9 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:textSize="18sp"
-        android:layout_marginBottom="10dp"/>
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/backButton"
@@ -44,4 +54,4 @@
         android:layout_marginRight="16dp"
         android:layout_gravity="end"/>
 
-</LinearLayout>
+</RelativeLayout>
