--- a/app/GuardianAngel/app/src/main/res/layout/activity_steps_monitor.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/activity_steps_monitor.xml
@@ -6,18 +6,13 @@
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
+        android:id="@+id/appBarLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/topAppBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            app:menu="@menu/top_app_bar"
-            app:navigationIcon="@drawable/baseline_arrow_back_24"
-            app:title="@string/setgoaltitle" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -25,7 +20,7 @@
         android:id="@+id/remainderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="26dp"
+        android:layout_marginBottom="32dp"
         android:text="Send Remainder"
         app:layout_constraintBottom_toTopOf="@+id/suggestionsButton"
         app:layout_constraintStart_toStartOf="@+id/suggestionsButton"
@@ -35,20 +30,20 @@
         android:id="@+id/suggestionsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="110dp"
-        android:layout_marginBottom="54dp"
+        android:layout_marginBottom="14dp"
         android:text="See Suggestions"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/remainderButton" />
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/idBarChart"
-        android:layout_width="391dp"
-        android:layout_height="151dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="44dp"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="22dp"
         app:layout_constraintBottom_toTopOf="@+id/remainderButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,23 +53,23 @@
         android:id="@+id/progressIndicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
         android:indeterminate="false"
         android:max="1000"
         android:progress="0"
         app:indicatorSize="200dp"
-        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
         app:trackColor="@color/quantum_deeppurple50"
         app:trackCornerRadius="10dp"
         app:trackThickness="10dp" />
 
     <TextView
         android:id="@+id/goalField"
-        android:layout_width="153dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="66dp"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="50dp"
         android:text="Goal Not Set"
         android:textAlignment="center"
         android:textSize="23sp"
@@ -85,9 +80,8 @@
 
     <TextView
         android:id="@+id/stepsCount"
-        android:layout_width="92dp"
+        android:layout_width="104dp"
         android:layout_height="0dp"
-        android:layout_marginTop="80dp"
         android:layout_marginBottom="25dp"
         android:text="0"
         android:textAlignment="center"
@@ -95,14 +89,14 @@
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/topAppBar" />
 
     <Button
         android:id="@+id/goalButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="37dp"
         android:text="Set Goal"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toTopOf="@+id/idBarChart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,13 +106,27 @@
         android:id="@+id/view"
         android:layout_width="152dp"
         android:layout_height="4dp"
-        android:layout_marginBottom="25dp"
         android:background="#673AB7"
+        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toTopOf="@+id/goalField"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stepsCount" />
+
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/topAppBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="53dp"
+        android:minHeight="?attr/actionBarSize"
+        app:layout_constraintBottom_toTopOf="@+id/stepsCount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        app:menu="@menu/top_app_bar"
+        app:navigationIcon="@drawable/baseline_arrow_back_24"
+        app:title="@string/setgoaltitle" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
