--- a/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
@@ -118,28 +118,59 @@
                 android:focusable="true"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="parent">
+                <TextView
+                    android:id="@+id/card1title"
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/what"
+                    android:textStyle="bold"
+                    android:textSize="15sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textHolder1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="No Events Today"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="40dp"/>
+                <ImageView
+                    android:id="@+id/event"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="60dp"
+                    android:layout_marginStart="20dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:contentDescription="@string/none"
+                    app:srcCompat="@drawable/outline_event_busy_24" />
 
-                    <!-- Second Text Holder -->
+                <TextView
+                    android:id="@+id/card1body"
+                    android:layout_width="100dp"
+                    android:layout_height="85dp"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginTop="50dp"
+                    android:text="@string/noevent"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/weather"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="60dp"
+                    android:layout_marginStart="170dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:contentDescription="@string/none"
+                    app:srcCompat="@drawable/outline_wb_sunny_24" />
+
+
                     <TextView
                         android:id="@+id/textHolder2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Get Weather Recommendations"
-                        android:textSize="16sp"
-                        android:textStyle="bold|italic"
-                        android:textColor="#8A2BE2"
-                        android:layout_gravity="center"/>
+                        android:layout_width="100dp"
+                        android:layout_height="85dp"
+                        android:layout_marginStart="225dp"
+                        android:layout_marginTop="50dp"
+                        android:text="@string/sunny"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toStartOf="parent" />
 
                     <ImageView
                         android:id="@+id/arrow1"
@@ -289,9 +320,9 @@
 
                 <ImageView
                     android:id="@+id/near"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="60dp"
                     android:layout_marginStart="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:contentDescription="@string/none"
