--- a/app/GuardianAngel/app/src/main/res/layout/activity_walking_suggestions.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/activity_walking_suggestions.xml
@@ -32,5 +32,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintStart_toEndOf="parent"/>
 
+    <ListView
+        android:id="@+id/suggestions_list"
+        android:layout_width="match_parent"
+        android:layout_height="550dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="650dp"
+        android:layout_marginEnd="20dp"
+        android:checkable="true"
+        android:clickable="true"
+        android:focusable="true">
+    </ListView>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="98dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="620dp"
+        android:text="Places"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="98dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="290dp"
+        android:layout_marginTop="620dp"
+        android:text="Distance"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
